batch-clustering-e2e/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-batchservice
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-batch
