batch-clustering-e2e/k8s/base/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: batch-service
  namespace: ns-batchservice
  labels:
    app: batch-scheduler
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: batch-scheduler
  ports:
    - name: raft-p2p
      port: 7800
      targetPort: 7800
      protocol: TCP
    - name: http-api
      port: 8080
      targetPort: 8080
      protocol: TCP
